removed xms, xmx and permsize (should be declared in JAVA_OPTS)